--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="section second">
 				<div id="start-text" class="text">Ваш подарок загружается</div>
 				<div id="deadline-message" class="text hidden">
-					Подарок ожитает вас по адресу: с. Пивовариха, пер. Подгорный, 7а
+					Подарок ожидает Вас по адресу: с. Пивовариха, пер. Подгорный, 7а
 				</div>
 				<div class="gift" data-n="0" onclick="this.dataset.n = (this.dataset.n + 1) % 3;"></div>
 			
